[gd_scene load_steps=6 format=3 uid="uid://m5r040j0bgdj"]

[ext_resource type="Script" uid="uid://dgikaoauc71ej" path="res://barkley2/scenes/_Godot_Combat/_candy_pickup/candy_pickup.gd" id="1_d5cmu"]
[ext_resource type="Texture2D" uid="uid://ckdra5vpxt43g" path="res://barkley2/assets/b2_original/images/merged/sCandy.png" id="2_0nxlj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d5cmu"]
atlas = ExtResource("2_0nxlj")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vxs6"]
atlas = ExtResource("2_0nxlj")
region = Rect2(0, 0, 16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_odawf"]
radius = 6.0

[node name="candy_pickup" type="Area2D"]
script = ExtResource("1_d5cmu")

[node name="candy_sprite_shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.75)
texture = SubResource("AtlasTexture_d5cmu")

[node name="candy_sprite" type="Sprite2D" parent="."]
modulate = Color(2, 2, 2, 1)
position = Vector2(0, -8)
texture = SubResource("AtlasTexture_2vxs6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_odawf")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
